--- a/src/components/assets/custom-style.css
+++ b/src/components/assets/custom-style.css
@@ -3,6 +3,34 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
+label.color-selector {
+    width: 100%;
+    height: 52px;
+    display: flex;
+    line-height: 52px;
+    padding: 0px 20px;
+    align-items: center;
+    background: #f8f9fa;
+    font-weight: 400 !important;
+    border-radius: 100px;
+}
+label.color-selector input.hidden {
+    margin-left: 10px;
+    width: 10px;
+    height: 10px;
+    padding: 0;
+    border: 0;
+    opacity: 0;
+}
+span.circle {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    margin-left: -10px;
+    position: relative;
+    border-radius: 50%;
+    z-index: 11;
+}
 .page-titlee, .modal h1 {
     font-size: 28px;
     font-weight: 700;
@@ -63,7 +91,9 @@ body {
 .btn {
     font-size: 14px;
 }
-
+.formbtn-main-roww button.btn.btn-primary {
+    padding: 0 24px !important;
+}
 /*******6-6-22-css*******/
 .btn-secondary {
     height: 36px;
@@ -130,9 +160,9 @@ color: gainsboro;
     padding: 0px;
     border-radius: 29px !important;
 }
-
 .form-select {
     color: black !important;
+    background: #f8f9fa;
 }
 
 .licence-form {
@@ -415,7 +445,7 @@ span.notif_countt {
 .Premium.Features-red-bg-nav {
     background: #cf1322;
     text-align: center;
-    padding: 22px 0px 1px;
+    padding: 5px 0px;
     position: absolute;
     width: 100%;
     top: 0px;
@@ -438,9 +468,9 @@ font-size: 18px;
     line-height: 36px;
 }
 
-.Premium.Features-red-bg-nav p {
+.Premium.Features-red-bg-nav span {
     font-size: 12px;
-    line-height: 18px;
+    line-height: 5px;
     color: white;
 }
 
@@ -559,6 +589,9 @@ label.file-upload-labell:before {
     min-height: 52px;
     border-radius: 26px;
 }
+.premium-features-class {
+    padding-top: 3rem !important;
+}
 .form-group .form-check-label {
     font-weight: 400;
 }
@@ -614,6 +647,19 @@ label.file-upload-labell:before {
 }
 .display-none {
     display: none;
+}
+.notification_bar.show .dropdown-toggle {
+    position: relative;
+    z-index: 99;
+}
+.show .dropdown_innerr-notif {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    left: 0;
+    top: 0;
+    z-index: 9;
 }
 .notif_main-outer {
     padding-left: 5px;
@@ -755,17 +801,20 @@ label.file-upload-labell:before {
 }
 .header-mainn .navbar-collapse {
     position: absolute;
-    top: 90px;
+    top: 110px;
     z-index: 99;
     background: #f8f9fa;
-    padding: 20px;
     left: 0;
     width: 100%;
     box-shadow: 0 5px 10px 1px rgb(0 0 0 / 10%);
 }
+/* .nav_notif-outerr .navbar-collapse.show[style="display: none;"] {
+    display: block !important;
+} */
 .header-mainn .navbar-collapse .navbar-nav {
     max-width: 690px;
     margin: auto;
+    padding: 20px;
 }
 }
 
